bug cannot parse json in game
